--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.2",
     "slick-carousel": "^1.8.1",
     "yup": "^1.0.2"
   },
